# fastapi-learn

./: main.py  pyproject.toml
fsociety-back/: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fsociety-back/app/: db.py  main.py  models.py  schemas.py
fsociety-back/app/api/: api.py  deps.py
fsociety-back/app/api/endpoints/: auth.py  users.py
fsociety-back/app/core/: config.py  security.py
fsociety-back/app/db/: base.py  engine.py  session.py
fsociety-back/app/models/: refresh_token.py  user.py
fsociety-back/app/schemas/: login.py  token.py  user.py
fsociety-front/: index.html  package-lock.json  package.json  vite.config.ts
fsociety-front/src/: App.tsx
fsociety-front/src/api/: currentUser.api.ts  currentUser.schema.ts  http.ts  http.types.ts  login.api.ts  login.schema.ts  me.api.ts  signup.api.ts  signup.schema.ts  users.api.ts  users.schema.ts
fsociety-front/src/hooks/api/: useCreateUser.tsx  useLogin.tsx  useSignUp.tsx
fsociety-front/src/pages/CreateUser/: CreateUser.tsx
fsociety-front/src/pages/Login/: Login.tsx
fsociety-front/src/pages/NotFound/: NotFound.tsx
fsociety-front/src/pages/SelfProfile/: SelfProfile.tsx
fsociety-front/src/pages/SignUp/: SignUp.tsx
fsociety-front/src/pages/UsersList/: UsersList.tsx
fsociety-front/src/providers/: InitProvider.tsx
fsociety-front/src/router/: router.tsx
fsociety-front/src/store/: authSlice.ts  authThunks.ts  hooks.ts  index.ts
fsociety-front/src/types/: user.type.ts
fsociety-front/src/utils/: getFetchResult.ts
(+6 files in other folders)
